# block-explorer

./: ci-cd.yml  docker-compose.yml
.github/workflows/: ci-cd.yml
block-explorer-ui/: .env  package-lock.json  package.json
block-explorer-ui/server/: index.js
block-explorer-ui/src/: App.css  App.tsx
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  BitcoinPriceChart.css  BlockHeight.css
frontend/src/components/: BitcoinPriceChart.tsx  BlockHeight.tsx
frontend/src/hooks/: useWebSocket.ts
server/: .gitignore  Cargo.toml  Dockerfile
server/src/: main.rs
