[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "=1.0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
tokio-tungstenite = "*"
futures-util = "0.3"


